Update: Sửa lại lỗi các bài đăng hiển thị không đúng vị trí và thanh tìm kiếm không hoạt động

--- a/content/about.html
+++ b/content/about.html
@@ -1,6 +1,5 @@
 ---
 title: "Giới Thiệu"
-date: 2025-12-20
 draft: false
 ---
 
@@ -20,24 +19,24 @@ draft: false
             <p class="about-bio-content">
                 Mình là sinh viên năm cuối chuyên ngành công nghệ phần mềm tại trường Đại học HUTECH
                 (Đại học Công nghệ TP.HCM). Với nền tảng vững chắc về khoa học máy tính
-                và đam mê xây dựng hệ thống, tôi mong muốn áp dụng kiến thức của mình để giải quyết các vấn đề thực tế.
+                và đam mê xây dựng hệ thống, mình mong muốn áp dụng kiến thức của bản thân để giải quyết các vấn đề thực tế.
             </p>
 
             <h2 class="about-content-heading">Lộ Trình Nghề Nghiệp</h2>
             <p class="about-bio-content">
-                Mục tiêu của tôi là trở thành một Kỹ sư Phần mềm chuyên nghiệp. Thế mạnh và đam mê chính của tôi nằm ở
-                <strong> Phát triển Backend</strong>—kiến trúc logic mạnh mẽ, cơ sở dữ liệu và API có khả năng mở rộng.
-                Tuy nhiên, tôi tin vào việc trở thành một lập trình viên toàn diện, vì vậy tôi đang tích cực cải thiện
-                kỹ năng <strong>Frontend </strong>
+                Mục tiêu của mình là trở thành một Kỹ sư Phần mềm chuyên nghiệp. Thế mạnh và đam mê chính của mình nằm ở
+                 Phát triển Backend kiến trúc logic mạnh mẽ, cơ sở dữ liệu và API có khả năng mở rộng.
+                Tuy nhiên, mình tin vào việc trở thành một lập trình viên toàn diện, vì vậy mình đang tích cực cải thiện
+                kỹ năng Frontend
                 để thu hẹp khoảng cách giữa logic phía server và trải nghiệm người dùng, hướng tới khả năng
                 Full-stack toàn diện.
             </p>
 
             <h2 class="about-content-heading">Sở Thích & Hoạt Động Ngoài Lề</h2>
             <p class="about-bio-content">
-                Khi không lập trình hay debug, bạn có thể tìm thấy tôi đang đắm chìm trong thế giới game.
-                Với tôi, chơi game không chỉ là giải trí; đó là cách để rèn luyện phản xạ và tư duy chiến thuật.
-                Tôi thích thử thách của các game cạnh tranh và cốt truyện của các RPG. Điều này giúp tôi nạp lại năng
+                Khi không lập trình hay debug, bạn có thể tìm thấy mình đang đắm chìm trong thế giới game.
+                Với mình, chơi game không chỉ là giải trí; đó là cách để rèn luyện phản xạ và tư duy chiến thuật.
+                Mình thích thử thách của các game cạnh tranh và cốt truyện của các RPG. Điều này giúp bản thân nạp lại năng
                 lượng
                 và thường mang lại những ý tưởng mới cho các dự án của mình.
             </p>
