--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Blog Lập Trình Mạng">
     <meta name="author" content="Nguyễn Thành Tài">
-    <title>Dự Án Của Tôi | Taf1 IT BLOG</title>
+    <title> | Taf1 IT BLOG</title>
    
     <link rel="stylesheet" href="/css/style.css">
 </head>
